# rc2026_field

./: API.md  CMakeLists.txt  README.md  package.xml
launch/: rc2026_field_sim.launch.py  rc2026_field_sim_with_controller.launch.py  rc2026_mmrobot_mapping.launch.py  rc2026_mmrobot_rviz.launch.py  rc2026_mmrobot_sim.launch.py
models/BlueFakeKFS01/: model.config  model.sdf
models/BlueFakeKFS02/: model.config  model.sdf
models/BlueFakeKFS03/: model.config  model.sdf
models/BlueFakeKFS04/: model.config  model.sdf
models/BlueFakeKFS05/: model.config  model.sdf
models/BlueFakeKFS06/: model.config  model.sdf
models/BlueFakeKFS07/: model.config  model.sdf
models/BlueFakeKFS08/: model.config  model.sdf
models/BlueFakeKFS09/: model.config  model.sdf
models/BlueFakeKFS10/: model.config  model.sdf
models/BlueFakeKFS11/: model.config  model.sdf
models/BlueFakeKFS12/: model.config  model.sdf
models/BlueFakeKFS13/: model.config  model.sdf
models/BlueFakeKFS14/: model.config  model.sdf
models/BlueFakeKFS15/: model.config  model.sdf
models/BlueR1KFS/: model.config  model.sdf
models/BlueTrueKFS01/: model.config  model.sdf
models/BlueTrueKFS02/: model.config  model.sdf
models/BlueTrueKFS03/: model.config  model.sdf
models/BlueTrueKFS04/: model.config  model.sdf
models/BlueTrueKFS05/: model.config  model.sdf
models/BlueTrueKFS06/: model.config  model.sdf
models/BlueTrueKFS07/: model.config  model.sdf
models/BlueTrueKFS08/: model.config  model.sdf
models/BlueTrueKFS09/: model.config  model.sdf
models/BlueTrueKFS10/: model.config  model.sdf
models/BlueTrueKFS11/: model.config  model.sdf
models/BlueTrueKFS12/: model.config  model.sdf
models/BlueTrueKFS13/: model.config  model.sdf
models/BlueTrueKFS14/: model.config  model.sdf
models/BlueTrueKFS15/: model.config  model.sdf
models/RedFakeKFS01/: model.config  model.sdf
models/RedFakeKFS02/: model.config  model.sdf
models/RedFakeKFS03/: model.config  model.sdf
models/RedFakeKFS04/: model.config  model.sdf
models/RedFakeKFS05/: model.config  model.sdf
models/RedFakeKFS06/: model.config  model.sdf
models/RedFakeKFS07/: model.config  model.sdf
models/RedFakeKFS08/: model.config  model.sdf
models/RedFakeKFS09/: model.config  model.sdf
models/RedFakeKFS10/: model.config  model.sdf
models/RedFakeKFS11/: model.config  model.sdf
models/RedFakeKFS12/: model.config  model.sdf
models/RedFakeKFS13/: model.config  model.sdf
models/RedFakeKFS14/: model.config  model.sdf
models/RedFakeKFS15/: model.config  model.sdf
models/RedR1KFS/: model.config  model.sdf
models/RedTrueKFS01/: model.config  model.sdf
models/RedTrueKFS02/: model.config  model.sdf
models/RedTrueKFS03/: model.config  model.sdf
rc2026_field/: cmd_vel_pose_driver.py  kfs_manager.py  lidar_frame_relay.py  odom_tf_broadcaster.py
rviz/: mmrobot_sim.rviz
scripts/: kill_gazebo.sh  start_mmrobot_mapping.sh  start_mmrobot_sim.sh  start_mmrobot_teleop.sh  start_mmrobot_view.sh
src/: gz_pose_bridge.cpp
worlds/: robocon2026_mmrobot.world  robocon2026_with_kfs.world
(+24 files in other folders)
